# ansible-role-os-packages

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: molecule.yaml
defaults/: main.yml
meta/: main.yml
molecule/default/: Dockerfile.j2  converge.yml  molecule.yml  verify.yml
molecule/default/tests/: test_default.py
tasks/: apt.yml  apt_spec.yml  dnf.yml  dnf_spec.yml  explicit.yml  main.yml  package.yml  package_spec.yml  pacman.yml  pacman_spec.yml  yum.yml  zypper.yml  zypper_spec.yml
