[project]
name = "ansible-role-os-packages"
version = "0.0.0"
description = "Development dependencies for testing the ansible-role-os-packages Ansible role with Molecule."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ansible-core>=2.13.13",
    "ansible-lint>=6.8.7",
    "docker",
    "molecule",
    "molecule-plugins[docker]>=23.0.0",
]

[tool.uv]
# No special configuration needed for this simple project; uv will manage
# a virtual environment and install the dependencies above.
